ajout des fonction d'init + de clone FONCTIONNEL !

--- a/Vue/head.html
+++ b/Vue/head.html
@@ -1,11 +1,15 @@
 <?php
-session_start() ;
+session_start();
+include_once('../dispatcheur.php');
+
 ?>
+ 
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<link rel="stylesheet" href="css.css" />
-<title>Mon bureau virtuel</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="../Vue/css.css" />
+	<title>                </title>
 </head>
 <body>
+    
