1er tentative du formulaire de connection / inscription

--- a/todolist/Schema/Schema du squelette.htm
+++ b/todolist/Schema/Schema du squelette.htm
@@ -11,7 +11,7 @@
 		<meta name="Société" content="Hewlett-Packard"/>
 
 		<title>Dessin1</title>
-		<script src="Shema%20du%20squelette_fichiers/frameset.js" type="text/jscript" language="jscript"></script>
+		<script src="Schema%20du%20squelette_fichiers/frameset.js" type="text/jscript" language="jscript"></script>
 		<script type="text/jscript" language="jscript" >
 
 function FileEntry (pageIndex, pageID, pageName, priImage, secImage) 
@@ -697,15 +697,15 @@ function CreateHLObj (hlNode)
 	</head>
 	
 	<frameset id="frmstOuter" cols="237,*" title="Dessin1">
-		<frame src="Shema%20du%20squelette_fichiers/toolbar.htm" name="frmToolbar" id="frmToolbar" title="Ce cadre contient des outils pour manipuler votre dessin." frameborder="6" bordercolor="#999999" scrolling="no" marginheight="0" marginwidth="0" >
-		<frame src="Shema%20du%20squelette_fichiers/gif_1.htm" name="frmDrawing" title="Ce cadre contient les pages de votre dessin." marginheight="10" marginwidth="10" onload="if (parent.isUpLevel) FramePageLoaded()" >
+		<frame src="Schema%20du%20squelette_fichiers/toolbar.htm" name="frmToolbar" id="frmToolbar" title="Ce cadre contient des outils pour manipuler votre dessin." frameborder="6" bordercolor="#999999" scrolling="no" marginheight="0" marginwidth="0" >
+		<frame src="Schema%20du%20squelette_fichiers/gif_1.htm" name="frmDrawing" title="Ce cadre contient les pages de votre dessin." marginheight="10" marginwidth="10" onload="if (parent.isUpLevel) FramePageLoaded()" >
 
 		<noframes>
 			<body>
 
 				<h1>Dessin1</h1>
 				<ul>
-				<li><a href="Shema%20du%20squelette_fichiers/gif_1.htm">Page 1</a></li>
+				<li><a href="Schema%20du%20squelette_fichiers/gif_1.htm">Page 1</a></li>
 
 				</ul>
 			</body>
